# documentdb

./: CHANGELOG.md  CODEOWNERS  MAINTAINERS.md  Makefile.cflags  README.md  documentdb_errors.csv  index.html  syncpoint_oss.txt
.github/containers/Build-Ubuntu/: Dockerfile
.github/workflows/: build_deb_packages.yml  build_gateway.yml  build_rpm_packages.yml  codeql.yml  documentdb_release.yml  gateway_tests.yml  regress_tests.yml
internal/pg_documentdb_distributed/: documentdb_distributed.control
internal/pg_documentdb_distributed/include/: distributed_hooks.h
packaging/rpm/spec/: documentdb.spec
packaging/test_packages/: test-gateway-install-entrypoint.sh
pg_documentdb/: Makefile  documentdb.control
pg_documentdb/include/: api_hooks.h  api_hooks_def.h
pg_documentdb/include/aggregation/: bson_aggregate.h  bson_aggregation_pipeline.h  bson_aggregation_pipeline_private.h  bson_project.h  bson_query_common.h
pg_documentdb/include/background_worker/: background_worker_job.h
pg_documentdb/include/commands/: commands_common.h
pg_documentdb/include/explain/: documentdb_explain.h
pg_documentdb/include/index_am/: documentdb_rum.h  index_am_exports.h  index_am_utils.h
pg_documentdb/include/infrastructure/: job_management.h
pg_documentdb/include/metadata/: index.h  metadata_cache.h
pg_documentdb/include/opclass/: bson_gin_common.h  bson_gin_composite_private.h  bson_gin_composite_scan.h  bson_gin_index_mgmt.h  bson_gin_index_term.h  bson_gin_index_term_private.h
pg_documentdb/include/operators/: bson_expression.h
pg_documentdb/include/planner/: mongo_query_operator.h
pg_documentdb/include/query/: bson_dollar_selectivity.h
pg_documentdb/include/utils/: docdb_make_funcs.h  feature_counter.h  utf8_utils.h
pg_documentdb/sql/: documentdb--0.110-0--0.111-0.sql  documentdb--0.111-0--0.112-0.sql
pg_documentdb/src/: api_hooks.c
pg_documentdb/src/aggregation/: bson_aggregates.c  bson_aggregation_metadata_queries.c  bson_aggregation_nested_pipeline.c  bson_aggregation_pipeline.c  bson_aggregation_window_operators.c  bson_bucket_auto.c  bson_first_last_with_expr.c  bson_project.c  bson_project_operator.c  bson_query_common.c  bson_sorted_accumulator.c  bson_unwind.c
pg_documentdb/src/background_worker/: background_worker.c
pg_documentdb/src/commands/: aggregation_commands.c  bulk_write.c  coll_mod.c  coll_stats.c  commands_common.c  create_collection_view.c  create_indexes.c  create_indexes_background.c  cursors.c  (+7 more)
pg_documentdb_core/: documentdb_core.control
pg_documentdb_extended_rum/: documentdb_extended_rum.control
pg_documentdb_extended_rum/sql/: documentdb_extended_rum--0.110-0--0.111-0.sql
pg_documentdb_extended_rum/src/: documentdb_extended_rum_adapter.c
pg_documentdb_gw/: Cargo.toml  Makefile  NOTICE
pg_documentdb_gw/documentdb_gateway/: Cargo.toml
pg_documentdb_gw/documentdb_gateway_core/: Cargo.toml
pg_documentdb_gw/documentdb_macros/: Cargo.toml
pg_documentdb_gw/documentdb_macros/src/: lib.rs
pg_documentdb_gw/documentdb_tests/: Cargo.toml
pg_documentdb_gw/documentdb_tests/src/commands/: aggregate.rs  coll_stats.rs  collection_cmd.rs  compact.rs  constant.rs  count.rs  current_op.rs  cursor.rs  delete.rs  distinct.rs  explain.rs  find.rs  find_and_modify.rs  indexing.rs  insert.rs  killop.rs  list_collections.rs  list_databases.rs  mod.rs  multi_connect.rs  rbac_builtin_read_any_database_tests.rs  rename_collection.rs  session.rs  text_search.rs  transaction.rs  unsupported_commands.rs  update.rs  users.rs  validate_cmd.rs
pg_documentdb_gw/documentdb_tests/src/test_setup/: clients.rs  config.rs  gateway.rs  initialize.rs  postgres.rs
pg_documentdb_gw/documentdb_tests/src/utils/: commands.rs  mod.rs  rbac_validator.rs  users.rs
pg_documentdb_gw/documentdb_tests/tests/: command_rbac_tests.rs  command_tests.rs  cursor_tests.rs  killop_tests.rs  list_databases_tests.rs  rbac_permission_tests.rs  response_length_tests.rs  sessions_tests.rs  ssl_tests.rs  transaction_tests.rs  unauthenticated_tests.rs  unix_socket_tests_disabled.rs  unix_socket_tests_enabled.rs  unsupported_commands_tests.rs  user_crud_tests.rs
pg_documentdb_gw_host/: Cargo.toml  clippy.toml
pg_documentdb_gw_host/src/: bgworker.rs  gucs.rs
rfcs/: 0005-functional-testing.md
scripts/: build_and_install_with_pgrx.sh  emulator_entrypoint.sh  find_next_collection_id.sh  install_setup_postgres.sh
(+357 files in other folders)
