[package]
name = "pg_documentdb_gw_host"
version = "0.1.0"
edition = "2021"
description = "PGRX background worker hosting the DocumentDB gateway inside PostgreSQL."
license = "MIT"
repository = "https://github.com/documentdb/documentdb"
readme = "../README.md"
keywords = ["documentdb", "gateway", "pgrx"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_documentdb_gw_host"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg15 = ["pgrx/pg15" ]
pg16 = ["pgrx/pg16" ]
pg17 = ["pgrx/pg17" ]
pg18 = ["pgrx/pg18" ]
pg_test = []

[dependencies]
pgrx = { version ="=0.16.0", default-features = false }
documentdb_gateway_core = { path = "../pg_documentdb_gw/documentdb_gateway_core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
expect_used = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"

# Define custom opt outs here
# TODO: tackle this issue down in the separate PR
multiple_crate_versions = "allow"
# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
# If the function has side-effects, not calling it will change the semantic of the program
or_fun_call = "allow"
# Convolutes code
option_if_let_else = "allow"

[profile.dev]
panic = "unwind"

[profile.release-with-symbols]
inherits = "release"
# Generates the minimal amount of debug info for backtraces with filename/line number info, but not anything else
debug = "line-tables-only"
opt-level = 3
lto = "fat"
codegen-units = 1
